# ctxd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODOS.md
clients/python/ctxd-py/: .gitignore  README.md  pyproject.toml
clients/python/ctxd-py/tests/: conftest.py  test_event_schema.py  test_grant_revoke.py  test_health.py  test_peers.py  test_signing.py  test_stats.py  test_sync_wrapper.py  test_wire_conformance.py  test_write_query_subscribe.py
clients/rust/ctxd-client/: Cargo.toml  README.md
clients/rust/ctxd-client/src/: client.rs  errors.rs  events.rs  http.rs  lib.rs  signing.rs  wire.rs
clients/rust/ctxd-client/tests/: conformance.rs  integration.rs
crates/ctxd-adapter-core/: Cargo.toml
crates/ctxd-adapter-core/src/: lib.rs  sink.rs
crates/ctxd-adapter-fs/: Cargo.toml
crates/ctxd-adapter-fs/src/: lib.rs  main.rs  watcher.rs
crates/ctxd-adapter-github/: Cargo.toml
crates/ctxd-adapter-github/src/: adapter.rs  client.rs  config.rs  events.rs  lib.rs  main.rs  parse.rs  poller.rs  state.rs
crates/ctxd-adapter-github/tests/: comment_poll.rs  etag_caching.rs  idempotency_cursor.rs  issue_poll.rs  notifications_poll.rs  pagination.rs  pat_auth.rs  pr_lifecycle.rs  rate_limit_headers.rs  secondary_rate_limit.rs
crates/ctxd-adapter-github/tests/common/: mod.rs
crates/ctxd-adapter-gmail/: Cargo.toml
crates/ctxd-adapter-gmail/src/: adapter.rs  crypto.rs  gmail.rs  lib.rs  main.rs  oauth.rs  parse.rs  state.rs
crates/ctxd-adapter-gmail/tests/: body_extraction.rs  history_expiry_fallback.rs  incremental_sync.rs  multi_label_idempotency.rs  oauth_device_flow.rs  rate_limit_backoff.rs  token_encryption.rs
crates/ctxd-adapter-gmail/tests/common/: mod.rs
crates/ctxd-cap/: Cargo.toml
crates/ctxd-cap/src/: lib.rs  state.rs
crates/ctxd-cap/tests/: approval_request_then_allow.rs  approval_request_then_deny.rs  approval_timeout.rs  budget_cost_table.rs  budget_limit_enforcement.rs  budget_not_enforced_when_state_none.rs  rate_limit_enforcement.rs  third_party_chain.rs
crates/ctxd-cli/: Cargo.toml
crates/ctxd-cli/src/: embedder.rs  federation.rs  lib.rs  main.rs  mcp_proxy.rs  pidfile.rs  protocol.rs  query.rs  rate_limit.rs  ready.rs  serve.rs  storage_selector.rs
crates/ctxd-cli/src/onboard/: adapter_runtime.rs  caps.rs  clients.rs  doctor.rs  mod.rs  paths.rs  pipeline.rs  protocol.rs  seeds.rs  skills_toml.rs  snapshot.rs
crates/ctxd-cli/tests/: approval_cli_subcommand.rs  dashboard_serve.rs  embedder_registry.rs  federation_bench.rs  federation_cap_violation.rs  federation_concurrent_writes.rs  federation_cursor_resume.rs  federation_handshake.rs  federation_loop_guard.rs  federation_parent_backfill.rs  federation_replication.rs  federation_tampered_event.rs  hook_silent_failure.rs  mcp_proxy_e2e.rs  mode_flags_e2e.rs  onboard_e2e.rs  pidfile_serve.rs  storage_selector.rs  watch_e2e.rs
crates/ctxd-cli/tests/common/: mod.rs
crates/ctxd-core/: Cargo.toml
crates/ctxd-core/src/: event.rs  hash.rs  lib.rs  signing.rs  subject.rs
crates/ctxd-dashboard/: Cargo.toml  README.md
crates/ctxd-dashboard/assets/: app.js  index.html  style.css
crates/ctxd-dashboard/src/: lib.rs  middleware.rs  static_assets.rs
crates/ctxd-dashboard/tests/: static_assets.rs
crates/ctxd-embed/: Cargo.toml
crates/ctxd-embed/src/: lib.rs  ollama.rs  openai.rs  retry.rs
crates/ctxd-embed/tests/: ollama_wiremock.rs  openai_wiremock.rs
crates/ctxd-http/: Cargo.toml
crates/ctxd-http/src/: lib.rs  middleware.rs  responses.rs  router.rs
crates/ctxd-http/src/handlers/: approvals.rs  dashboard.rs  events.rs  grants.rs  health.rs  mod.rs  peers.rs  search.rs  stats.rs  subjects.rs
crates/ctxd-http/tests/: approval_http_endpoint.rs  dashboard_endpoints.rs  peers_auth.rs  peers_list.rs  peers_remove.rs  stats_shape.rs
crates/ctxd-mcp/: Cargo.toml
crates/ctxd-mcp/src/: auth.rs  lib.rs  server.rs
crates/ctxd-mcp/src/transport/: auth_middleware.rs  mod.rs  sse.rs  streamable_http.rs
crates/ctxd-mcp/tests/: auth_header_precedence.rs  auth_missing_token_denied.rs  concurrent_transports.rs  same_tool_surface_all_transports.rs  search_mode_fts.rs  search_mode_hybrid_rrf.rs  search_mode_vector.rs  sse_transport.rs  stdio_transport.rs  streamable_http_transport.rs  transport_failure_isolation.rs  v03_tools.rs
crates/ctxd-mcp/tests/common/: mod.rs
crates/ctxd-store/: Cargo.toml
crates/ctxd-store-core/: Cargo.toml
crates/ctxd-store-core/src/: lib.rs  testsuite.rs
crates/ctxd-store-duckobj/: Cargo.toml
crates/ctxd-store-duckobj/src/: lib.rs  manifest.rs  parquet_io.rs  sidecar.rs  store.rs  store_trait.rs  wal.rs
crates/ctxd-store-duckobj/tests/: concurrent_appenders.rs  conformance.rs  manifest_atomicity.rs  parents_and_attestation_roundtrip.rs  recursive_read.rs  rotation.rs  wal_replay.rs
crates/ctxd-store-postgres/: Cargo.toml
crates/ctxd-store-postgres/migrations/: 0001_events.sql  0002_peers.sql  0003_caveats.sql  0004_vector.sql  0005_graph.sql
crates/ctxd-store-postgres/src/: caveat_state.rs  fts.rs  lib.rs  schema.rs  store.rs  store_trait.rs  vector.rs
crates/ctxd-store-postgres/tests/: conformance.rs  pg_concurrent_append.rs  pg_fts_ranking.rs  pg_migration_idempotency.rs  pg_rate_limit.rs  pg_recursive_read.rs
crates/ctxd-store-sqlite/: Cargo.toml
crates/ctxd-store-sqlite/benches/: store_bench.rs  vector_bench.rs
crates/ctxd-store-sqlite/src/: caveat_state.rs  lib.rs  migrate.rs  migrations.rs  store.rs  store_trait.rs
crates/ctxd-store-sqlite/src/views/: mod.rs  vector.rs
crates/ctxd-store-sqlite/tests/: budget_limit_persists_across_restart.rs  conformance.rs  dashboard_surface.rs  rate_limit_persists.rs  vector_corrupt_index_rebuild.rs  vector_crash_recovery.rs  vector_persist_and_restart.rs
crates/ctxd-store/benches/: store_bench.rs
crates/ctxd-store/src/: lib.rs  store.rs
crates/ctxd-wire/: Cargo.toml
crates/ctxd-wire/src/: client.rs  errors.rs  frame.rs  lib.rs  messages.rs
crates/ctxd-wire/tests/: client_loopback.rs  conformance_corpus.rs  conformance_emit.rs  dep_audit.rs
(+131 files in other folders)
