[workspace]
resolver = "2"
members = [
    "crates/ctxd-core",
    "crates/ctxd-store-core",
    "crates/ctxd-store-sqlite",
    "crates/ctxd-store-postgres",
    "crates/ctxd-store-duckobj",
    "crates/ctxd-store",
    "crates/ctxd-cap",
    "crates/ctxd-embed",
    "crates/ctxd-mcp",
    "crates/ctxd-http",
    "crates/ctxd-cli",
    "crates/ctxd-adapter-core",
    "crates/ctxd-adapter-fs",
    "crates/ctxd-adapter-gmail",
    "crates/ctxd-adapter-github",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ctxd/ctxd"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# IDs and time
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Crypto
sha2 = "0.10"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tempfile = "3"
