[package]
name = "ctxd-adapter-core"
description = "Shared adapter infrastructure for ctxd ingestion adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ctxd-core = { path = "../ctxd-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
