[package]
name = "ctxd-adapter-gmail"
description = "Gmail adapter for ctxd — ingests emails via the Gmail API"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ctxd-adapter-core = { path = "../ctxd-adapter-core" }
ctxd-core = { path = "../ctxd-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

# HTTP client (rustls only, no native-tls)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Crypto: AES-256-GCM with HKDF-SHA256 key derivation
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = { workspace = true }
rand = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock = "0.6"
serde_json = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
