[package]
name = "ctxd-cli"
description = "The ctxd binary — context substrate daemon for AI agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ctxd"
path = "src/main.rs"

[dependencies]
ctxd-core = { path = "../ctxd-core" }
ctxd-store = { path = "../ctxd-store" }
ctxd-cap = { path = "../ctxd-cap" }
ctxd-mcp = { path = "../ctxd-mcp" }
ctxd-http = { path = "../ctxd-http" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1", features = ["server", "transport-io"] }
axum = "0.8"
rmp-serde = "1"
uuid = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"
