[package]
name = "ctxd-cli"
description = "The ctxd binary — context substrate daemon for AI agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ctxd_cli"
path = "src/lib.rs"

[[bin]]
name = "ctxd"
path = "src/main.rs"

[features]
# By default the CLI ships both real embedder providers compiled in.
# Operators can disable either at build time to drop the reqwest
# transitive dependency, e.g. for size-constrained images.
default = ["openai", "ollama"]
openai = ["ctxd-embed/openai"]
ollama = ["ctxd-embed/ollama"]

[dependencies]
ctxd-core = { path = "../ctxd-core" }
ctxd-store = { path = "../ctxd-store" }
ctxd-store-core = { path = "../ctxd-store-core" }
ctxd-cap = { path = "../ctxd-cap" }
ctxd-mcp = { path = "../ctxd-mcp", features = ["http-transports"] }
ctxd-http = { path = "../ctxd-http" }
ctxd-embed = { path = "../ctxd-embed" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1", features = ["server", "transport-io"] }
axum = "0.8"
tokio-util = "0.7"
rmp-serde = "1"
uuid = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"

[dev-dependencies]
tempfile = { workspace = true }
ctxd-store-sqlite = { path = "../ctxd-store-sqlite" }
