[package]
name = "ctxd-cli"
description = "The ctxd binary — context substrate daemon for AI agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ctxd_cli"
path = "src/lib.rs"

[[bin]]
name = "ctxd"
path = "src/main.rs"

[features]
# By default the CLI ships both real embedder providers compiled in.
# Operators can disable either at build time to drop the reqwest
# transitive dependency, e.g. for size-constrained images.
default = ["openai", "ollama"]
openai = ["ctxd-embed/openai"]
ollama = ["ctxd-embed/ollama"]
# Optional storage backends. Default `serve` always uses the inlined
# SQLite path; non-default backends are gated so the binary stays
# small for operators who don't need them.
storage-postgres = ["dep:ctxd-store-postgres"]
storage-duckdb-object = ["dep:ctxd-store-duckobj"]

[dependencies]
ctxd-core = { path = "../ctxd-core" }
ctxd-store = { path = "../ctxd-store" }
ctxd-store-core = { path = "../ctxd-store-core" }
ctxd-cap = { path = "../ctxd-cap" }
ctxd-mcp = { path = "../ctxd-mcp", features = ["http-transports"] }
ctxd-http = { path = "../ctxd-http" }
ctxd-dashboard = { path = "../ctxd-dashboard" }
ctxd-wire = { path = "../ctxd-wire" }
ctxd-embed = { path = "../ctxd-embed" }
# Optional alternate backends — gated by feature flags above.
ctxd-store-postgres = { path = "../ctxd-store-postgres", optional = true }
ctxd-store-duckobj = { path = "../ctxd-store-duckobj", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1", features = ["server", "transport-io"] }
axum = "0.8"
tokio-util = "0.7"
rmp-serde = "1"
uuid = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"

# Unix-only: pidfile uses kill(pid, 0) for liveness probes.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only: systemd Type=notify support. No-op on macOS / Windows.
# Pinned at <0.5 so we keep `sd_notify::notify` taking a slice (the
# 0.5 surface restructured the API slightly).
[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
ctxd-store-sqlite = { path = "../ctxd-store-sqlite" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
