[package]
name = "ctxd-dashboard"
description = "Embedded web dashboard for ctxd — frontend assets and loopback middleware"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ctxd-cap = { path = "../ctxd-cap" }
ctxd-http = { path = "../ctxd-http" }
axum = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rust-embed = "8"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
ctxd-store = { path = "../ctxd-store" }
ctxd-core = { path = "../ctxd-core" }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
