[package]
name = "ctxd-mcp"
description = "MCP server implementation for ctxd"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Default keeps the crate lean for stdio-only users — axum, tower, and the
# streamable-HTTP server pull in a sizable transitive graph that callers
# embedding ctxd-mcp purely as a stdio MCP server should not pay for.
default = []
# Enable the `transport::sse` and `transport::streamable_http` modules,
# which expose `run_sse(addr)` and `run_streamable_http(addr)` helpers
# that bind axum-based HTTP listeners. Stdio is always available.
http-transports = [
    "dep:axum",
    "dep:bytes",
    "dep:futures",
    "dep:http",
    "dep:http-body-util",
    "dep:tokio-stream",
    "dep:tokio-util",
    "dep:tower",
    "dep:uuid",
    "rmcp/transport-streamable-http-server",
    "rmcp/server-side-http",
]

[dependencies]
ctxd-core = { path = "../ctxd-core" }
ctxd-store = { path = "../ctxd-store" }
ctxd-cap = { path = "../ctxd-cap" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rmcp = { version = "1", features = ["server", "transport-io", "schemars"] }
schemars = "1.0"
chrono = { workspace = true }

# `http-transports` feature gates these.
axum = { version = "0.8", optional = true }
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
http = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"
tracing-subscriber = { workspace = true }
