[package]
name = "ctxd-store-sqlite"
description = "SQLite-backed event store with materialized views for ctxd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ctxd-core = { path = "../ctxd-core" }
ctxd-store-core = { path = "../ctxd-store-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
instant-distance = "0.6"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }
ctxd-store-core = { path = "../ctxd-store-core", features = ["testsuite"] }

[[bench]]
name = "store_bench"
harness = false
