[package]
name = "ctxd-store"
description = "SQLite-backed event store with materialized views for ctxd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ctxd-core = { path = "../ctxd-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
