[package]
name = "ctxd-store"
description = "Back-compat re-export shim for ctxd-store-sqlite; new code should depend on ctxd-store-core + a concrete backend."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# v0.3: `ctxd-store` is now a back-compat shim re-exporting the default
# SQLite backend. Downstream crates that want runtime-selectable backends
# should depend on `ctxd-store-core` (the trait) directly; this shim keeps
# pre-v0.3 `use ctxd_store::EventStore` imports working while we migrate
# call sites.
ctxd-store-sqlite = { path = "../ctxd-store-sqlite" }
ctxd-store-core = { path = "../ctxd-store-core" }
