[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ctxd-client"
version = "0.4.0"
description = "Official Python SDK for the ctxd context substrate daemon."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "keeprlabs", email = "noreply@keeprlabs.com" },
]
keywords = ["ctxd", "cloudevents", "msgpack", "context", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "msgpack>=1.0",
    "pydantic>=2.7",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-xdist",
    "anyio",
    "build",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/keeprlabs/ctxd"
Repository = "https://github.com/keeprlabs/ctxd"
Issues = "https://github.com/keeprlabs/ctxd/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ctxd"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ctxd",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # function-call-in-default-argument (httpx defaults are fine)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/ctxd"]

[[tool.mypy.overrides]]
# msgpack ships without type stubs upstream. Treat its surface as
# ``Any`` rather than refusing to type-check our wire module.
module = "msgpack"
ignore_missing_imports = true
